--- a/apps/mantine.dev/src/components/MdxTabs/MdxTabs.module.css
+++ b/apps/mantine.dev/src/components/MdxTabs/MdxTabs.module.css
@@ -54,6 +54,15 @@
 .main {
   padding-inline: var(--docs-inline-spacing);
   width: 100%;
+  max-width: 994px;
+
+  @mixin smaller-than 1750px {
+    max-width: 914px;
+  }
+
+  @mixin smaller-than 1450px {
+    max-width: calc(100vw - var(--docs-table-of-contents-width) - var(--docs-navbar-width) - 48px);
+  }
 
   @mixin smaller-than $docs-toc-breakpoint {
     padding-inline-end: 0;
@@ -72,6 +81,15 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  max-width: 100%;
+
+  @mixin smaller-than 1450px {
+    max-width: calc(100vw - var(--docs-navbar-width) - 48px);
+  }
+
+  @media (hover: none) and (max-width: 750px) {
+    max-width: calc(100vw - var(--docs-navbar-width) - 33px);
+  }
 }
 
 .contentWrapper {
